<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/buLogin2"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="105dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="4dp"
        android:onClick="buLogin"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        app:backgroundTint="#4CAF50"
        app:layout_constraintBottom_toTopOf="@+id/homeText"
        app:layout_constraintEnd_toStartOf="@+id/buRegister2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myLoginPassword" />

    <Button
        android:id="@+id/buRegister2"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="105dp"
        android:layout_marginBottom="4dp"
        android:onClick="buRegister"
        android:text="@string/register"
        android:textColor="#FFFFFF"
        app:backgroundTint="#8800FF"
        app:layout_constraintBottom_toTopOf="@+id/homeText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buLogin2"
        app:layout_constraintTop_toBottomOf="@+id/myLoginPassword" />

    <Button
        android:id="@+id/buLogout2"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:onClick="buLogout"
        android:text="@string/logout"
        android:textColor="#FFFFFF"
        app:backgroundTint="#E91E1E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buRegister"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/myLoginEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginTop="153dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="5dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/login_email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/myLoginPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/myLoginPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="101dp"
        android:ems="10"
        android:hint="@string/login_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/buLogin2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myLoginEmail" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeText"
        app:layout_constraintVertical_bias="0.092" />

    <TextView
        android:id="@+id/homeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="328dp"
        android:layout_marginBottom="15dp"
        android:text="Let's  Play Tic Tac Toe"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>