<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:onClick="buLogout"
    android:orientation="vertical"
    tools:context="com.hope.onlinetictactoe.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buLogin"
            android:layout_width="99dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="buLogin"
            android:text="@string/login"
            app:backgroundTint="#4CAF50" />

        <Button
            android:id="@+id/buRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="buRegister"
            android:text="Register"
            app:backgroundTint="#8800FF" />

        <Button
            android:id="@+id/buLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="buLogout"
            android:text="@string/logout"
            app:backgroundTint="#E91E1E" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/MyLoginEmail"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/login_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/MyLoginPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/login_password"
            android:inputType="textPassword" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/InvitePlayerEmail"
            android:layout_width="222dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/invite_a_user_by_email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/buInvite"
            android:layout_width="114dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="buInvite"
            android:text="@string/invite"
            app:backgroundTint="#3F51B5" />

        <Button
            android:id="@+id/buAccept"
            android:layout_width="119dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="buAccept"
            android:text="@string/accept"
            app:backgroundTint="#4CAF50" />

    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="375dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="216dp"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <Button
                android:id="@+id/bu1"
                android:layout_width="50pt"
                android:layout_height="50pt"
                android:layout_marginLeft="3pt"
                android:layout_marginRight="3pt"
                android:onClick="BuClick"
                android:text=" "
                app:backgroundTint="@color/black" />

            <Button
                android:id="@+id/bu2"
                android:layout_width="50pt"
                android:layout_height="50pt"
                android:layout_marginRight="3pt"
                android:onClick="BuClick"
                android:text=" "
                app:backgroundTint="@color/black" />

            <Button
                android:id="@+id/bu3"
                android:layout_width="50pt"
                android:layout_height="50pt"
                android:onClick="BuClick"
                android:text=" "
                app:backgroundTint="@color/black" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/bu4"
                android:layout_width="50pt"
                android:layout_height="50pt"
                android:layout_marginLeft="3pt"
                android:layout_marginRight="3pt"
                android:onClick="BuClick"
                android:text=" "
                app:backgroundTint="@color/black" />

            <Button
                android:id="@+id/bu5"
                android:layout_width="50pt"
                android:layout_height="50pt"
                android:layout_marginRight="3pt"
                android:onClick="BuClick"
                android:text=" "
                app:backgroundTint="@color/black" />

            <Button
                android:id="@+id/bu6"
                android:layout_width="50pt"
                android:layout_height="50pt"
                android:onClick="BuClick"
                android:text=" "
                app:backgroundTint="@color/black" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/bu7"
                android:layout_width="50pt"
                android:layout_height="50pt"
                android:layout_marginLeft="3pt"
                android:layout_marginRight="3pt"
                android:onClick="BuClick"
                android:text=" "
                app:backgroundTint="@color/black" />

            <Button
                android:id="@+id/bu8"
                android:layout_width="50pt"
                android:layout_height="50pt"
                android:layout_marginRight="3pt"
                android:onClick="BuClick"
                android:text=" "
                app:backgroundTint="@color/black" />

            <Button
                android:id="@+id/bu9"
                android:layout_width="50pt"
                android:layout_height="50pt"
                android:onClick="BuClick"
                android:text=" "
                app:backgroundTint="@color/black"
                app:iconTint="#FFFFFF" />

        </TableRow>
    </TableLayout>

</LinearLayout>